Change the new Language Settings flag to default-enabled.

Design doc: https://docs.google.com/document/d/1DcJdOPTOZAJYE-c-_qY-HrFl37lC5Rr6gPng3Vt6b-0

Bug: 765077
Change-Id: Ib378858e929d8c29843c7eb4a3a494fdc85ecf58
Reviewed-on: https://chromium-review.googlesource.com/867178
Commit-Queue: Claudio M <claudiomagni@chromium.org>
Reviewed-by: Michael Martis <martis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530028}
Former-commit-id: b800ebb02933977cedb0acde11eb637869bf98e1